packages/pug-lexer/test/errors/interpolated-call.pug
mixin a
  p hey

- var myMixin = 'a'
+#{myMixin]}
